<?xml version="1.0"?>
<package format="3">
  <name>point_follow_planner</name>
  <version>0.0.0</version>
  <description>The point_follow_planner package</description>
  <maintainer email="amsl@todo.todo">amsl</maintainer>

  <license>TODO</license>

  <buildtool_depend>catkin</buildtool_depend>
  <depend>roscpp</depend>
  <depend>geometry_msgs</depend>
  <depend>nav_msgs</depend>
  <depend>visualization_msgs</depend>
  <depend>tf</depend>
  <depend>eigen</depend>
  <test_depend>rostest</test_depend>
  <test_depend>roslint</test_depend>
</package>
